k8s/linkwarden/linkwarden-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkwarden-route
  namespace: linkwarden
  annotations:
    external-dns.alpha.kubernetes.io/hostname: linkwarden.oliverilp.ee
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  parentRefs:
    - name: traefik-public-gateway
      namespace: traefik
  hostnames:
    - linkwarden.oliverilp.ee
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: linkwarden
          port: 3000
